--- a/三種狀態功能測試說明.md
+++ b/三種狀態功能測試說明.md
@@ -7,112 +7,140 @@
 2. **停用** (status: 0) - 暫時停用狀態  
 3. **凍結** (status: 2) - 凍結狀態
 
-## 狀態切換邏輯
+## 全新狀態按鈕設計 🎨
 
-### 循環切換順序
+### 直覺化分割按鈕設計
+- **左側按鈕**: 顯示當前狀態（綠色启用/灰色停用/黃色凍結），且為禁用狀態，只用於顯示
+- **右側下拉箭頭**: 提供可選的其他狀態選項，排除當前狀態
+
+### 狀態選擇邏輯
 ```
-启用(1) → 停用(0) → 凍結(2) → 启用(1) → ...
+當前狀態：启用 → 下拉選單顯示：[设为停用] [设为凍結]
+當前狀態：停用 → 下拉選單顯示：[设为启用] [设为凍結]  
+當前狀態：凍結 → 下拉選單顯示：[设为启用] [设为停用]
 ```
 
-### 代理狀態切換
-- 點擊代理列表中的狀態按鈕可循環切換狀態
-- 每次切換都會顯示確認對話框
-- 切換成功後會更新界面顯示
+## 操作流程
 
-### 會員狀態切換  
-- 點擊會員列表中的狀態按鈕可循環切換狀態
-- 每次切換都會顯示確認對話框
-- 切換成功後會更新界面顯示
+### 代理狀態更改
+1. 在代理列表中找到目標代理
+2. 點擊狀態按鈕右側的下拉箭頭
+3. 選擇要設定的新狀態（如：「设为停用」）
+4. 確認對話框會顯示：「确定要将代理 XXX 设为停用状态嗎？」
+5. 點擊確認後狀態立即更新
+
+### 會員狀態更改  
+1. 在會員列表中找到目標會員
+2. 點擊狀態按鈕右側的下拉箭頭
+3. 選擇要設定的新狀態（如：「设为凍結」）
+4. 確認對話框會顯示：「确定要将会员 XXX 设为凍結状态嗎？」
+5. 點擊確認後狀態立即更新
 
 ## 視覺效果
 
-### 狀態徽章樣式
-- **启用**: 綠色徽章 `bg-success`
-- **停用**: 灰色徽章 `bg-secondary`
-- **凍結**: 黃色徽章 `bg-warning text-dark`
+### 狀態顯示按鈕（左側，禁用狀態）
+- **启用**: 綠色徽章 `bg-success` + ✓ 圖標
+- **停用**: 灰色徽章 `bg-secondary` + 🚫 圖標
+- **凍結**: 黃色徽章 `bg-warning text-dark` + ❄️ 圖標
 
-### 狀態圖標
-- **启用**: ✓ (`fa-check`)
-- **停用**: 🚫 (`fa-ban`)
-- **凍結**: ❄️ (`fa-snowflake`)
+### 下拉選單選項（右側）
+- **设为启用**: 綠色勾選圖標 + 「设为启用」文字
+- **设为停用**: 灰色禁止圖標 + 「设为停用」文字
+- **设为凍結**: 黃色雪花圖標 + 「设为凍結」文字
 
 ## 新增的JavaScript函數
 
-### 1. getStatusText(status)
+### 1. changeAgentStatus(agent, newStatus)
 ```javascript
-// 返回狀態文字
-getStatusText(1) // → "启用"
-getStatusText(0) // → "停用"  
-getStatusText(2) // → "凍結"
+// 直接設定代理為指定狀態
+await changeAgentStatus(agent, 1)  // 设为启用
+await changeAgentStatus(agent, 0)  // 设为停用
+await changeAgentStatus(agent, 2)  // 设为凍結
 ```
 
-### 2. getStatusBadgeClass(status)
+### 2. changeMemberStatus(member, newStatus)
 ```javascript
-// 返回Bootstrap徽章樣式類別
-getStatusBadgeClass(1) // → "badge bg-success"
-getStatusBadgeClass(0) // → "badge bg-secondary"
-getStatusBadgeClass(2) // → "badge bg-warning text-dark"
+// 直接設定會員為指定狀態
+await changeMemberStatus(member, 1)  // 设为启用
+await changeMemberStatus(member, 0)  // 设为停用
+await changeMemberStatus(member, 2)  // 设为凍結
 ```
 
-### 3. getStatusIconClass(status)
+### 3. 保留的輔助函數
 ```javascript
-// 返回FontAwesome圖標類別
-getStatusIconClass(1) // → "fa-check"
-getStatusIconClass(0) // → "fa-ban"
-getStatusIconClass(2) // → "fa-snowflake"
+getStatusText(status)        // 返回狀態文字
+getStatusBadgeClass(status)  // 返回徽章樣式類別
+getStatusIconClass(status)   // 返回圖標類別
+```
+
+## HTML模板結構
+
+### 代理狀態按鈕
+```html
+<div class="btn-group">
+    <!-- 狀態顯示按鈕（禁用） -->
+    <button type="button" class="btn btn-sm" :class="getStatusBadgeClass(agent.status)" disabled>
+        <i class="fas" :class="getStatusIconClass(agent.status)"></i>
+        {{ getStatusText(agent.status) }}
+    </button>
+    
+    <!-- 下拉切換按鈕 -->
+    <button type="button" class="btn btn-sm btn-outline-secondary dropdown-toggle dropdown-toggle-split" 
+            data-bs-toggle="dropdown" aria-expanded="false">
+        <span class="visually-hidden">切換狀態</span>
+    </button>
+    
+    <!-- 下拉選單 -->
+    <ul class="dropdown-menu">
+        <li v-if="agent.status !== 1">
+            <a class="dropdown-item" href="#" @click.prevent="changeAgentStatus(agent, 1)">
+                <i class="fas fa-check text-success me-2"></i>设为启用
+            </a>
+        </li>
+        <li v-if="agent.status !== 0">
+            <a class="dropdown-item" href="#" @click.prevent="changeAgentStatus(agent, 0)">
+                <i class="fas fa-ban text-secondary me-2"></i>设为停用
+            </a>
+        </li>
+        <li v-if="agent.status !== 2">
+            <a class="dropdown-item" href="#" @click.prevent="changeAgentStatus(agent, 2)">
+                <i class="fas fa-snowflake text-warning me-2"></i>设为凍結
+            </a>
+        </li>
+    </ul>
+</div>
 ```
 
 ## 測試步驟
 
-### 1. 代理狀態測試
-1. 登入代理管理系統
-2. 進入「代理管理」頁面
-3. 找到任一代理，點擊其狀態按鈕
-4. 確認狀態按照 启用→停用→凍結→启用 順序切換
-5. 檢查徽章顏色和圖標是否正確顯示
+### 基本功能測試
+1. **檢查按鈕顯示**：確認狀態按鈕正確顯示當前狀態和顏色
+2. **檢查下拉選單**：確認下拉選單只顯示可選狀態，不包含當前狀態
+3. **測試狀態切換**：嘗試將代理/會員設定為不同狀態
+4. **驗證確認對話**：檢查確認對話框文字是否正確
+5. **檢查更新結果**：確認狀態更新後界面立即反映變化
 
-### 2. 會員狀態測試
-1. 進入「會員管理」頁面
-2. 找到任一會員，點擊其狀態按鈕
-3. 確認狀態按照 启用→停用→凍結→启用 順序切換
-4. 檢查徽章顏色和圖標是否正確顯示
-
-### 3. 狀態過濾測試
-1. 在搜索條件中選擇不同狀態進行過濾
-2. 確認可以正確過濾出對應狀態的用戶
-3. 測試「全部」選項是否顯示所有狀態的用戶
-
-## HTML模板使用
-
-```html
-<!-- 狀態顯示 -->
-<span :class="getStatusBadgeClass(user.status)">
-    {{ getStatusText(user.status) }}
-</span>
-
-<!-- 狀態切換按鈕 -->
-<button class="btn" :class="getStatusBadgeClass(user.status)" 
-        @click="toggleUserStatus(user)">
-    <i class="fas" :class="getStatusIconClass(user.status)"></i>
-    {{ getStatusText(user.status) }}
-</button>
-```
+### 進階功能測試
+1. **批量測試**：對多個代理/會員進行狀態切換
+2. **刷新測試**：切換狀態後刷新頁面，確認狀態持久化
+3. **權限測試**：確認只有有權限的用戶能看到狀態切換選項
+4. **錯誤處理**：測試網路錯誤或伺服器錯誤時的處理情況
 
 ## 兼容性說明
 
 ✅ **完全向後兼容**
-- 現有的启用(1)和停用(0)狀態功能保持不變
-- 新增的凍結(2)狀態不會影響現有數據
-- 所有現有功能正常運作
+- 原有的 `toggleAgentStatus()` 和 `toggleMemberStatus()` 函數保留
+- 所有現有的狀態處理邏輯不變
+- 資料庫狀態值定義不變（1=启用，0=停用，2=凍結）
 
-✅ **無破壞性更改**
-- 沒有修改任何現有API接口
-- 沒有刪除任何現有函數
-- 保持所有現有的業務邏輯
+✅ **UI/UX 大幅改善**
+- 解決了原本「启用狀態按鈕還顯示启用」的混淆問題
+- 提供清晰直覺的狀態設定選項
+- 使用Bootstrap標準設計確保美觀一致
 
 ## 注意事項
 
-1. 確保後端API也支援狀態值為2的凍結狀態
-2. 數據庫中的status欄位應該允許存儲值2
-3. 在業務邏輯中可能需要處理凍結狀態的特殊行為
-4. 建議在後端也實現相應的狀態驗證邏輯 
+1. 需要Bootstrap 5.x支援下拉選單功能
+2. 確保前端包含FontAwesome圖標庫
+3. 後端API端點 `/toggle-agent-status` 和 `/toggle-member-status` 需要正常運作
+4. 建議定期清理瀏覽器快取以確保JavaScript更新生效 
