調整報表表格結構：新增應收下線欄位並重組分組
主要修改：
1. 新增'應收下線'欄位
   - 位置在佔成左邊
   - 顯示-item.profitLoss（會員盈虧反轉）

2. 調整表格分組結構
   - 代理組從7欄減少到6欄（移除實佔退水）
   - 上交貨量和上級交收改為獨立欄位
   - 使用rowspan=2讓獨立欄位跨越兩行

3. 優化欄位順序
   - 會員輸贏組：輸贏、退水、盈虧結果
   - 代理組：應收下線、佔成、佔成金額、佔成結果、賺水、盈虧結果
   - 獨立欄位：上交貨量、上級交收

修改文件：
- agent/frontend/index.html
- deploy/frontend/index.html（同步修改但未完成tbody部分）
- 更新報表格式修改報告.md

--- a/報表格式修改報告.md
+++ b/報表格式修改報告.md
@@ -3,6 +3,9 @@
 ## 修改日期
 2024-12-24
 
+## 更新日期
+2024-12-24 (第二次修改)
+
 ## 修改內容概述
 
 本次修改主要針對代理管理平台的報表查詢功能進行了重大的表格格式優化，使其更符合專業博彩系統的規範和用戶需求。
@@ -123,4 +126,32 @@
 
 ## 版本控制
 - 已同步修改到主版本和deploy版本
-- 建議進行完整的功能測試後再部署到生產環境 
+- 建議進行完整的功能測試後再部署到生產環境
+
+## 第二次修改內容 (2024-12-24)
+
+### 報表表格結構調整
+
+1. **新增"應收下線"欄位**
+   - 位置：在"佔成"左邊
+   - 計算邏輯：-item.profitLoss（會員盈虧的反轉）
+   - 含義：代理應收下線的金額
+
+2. **調整分組結構**
+   - 代理組欄位從7個減少到6個（移除了"實佔退水"）
+   - "上交貨量"和"上級交收"改為獨立欄位，不屬於任何分組
+   - 使用 rowspan="2" 讓這兩個欄位跨越兩行
+
+3. **欄位順序調整**
+   新的欄位順序：
+   - 用戶名
+   - 下級金額
+   - 有效金額
+   - **會員輸贏組**：輸贏、退水、盈虧結果
+   - **代理組**：應收下線、佔成、佔成金額、佔成結果、賺水、盈虧結果
+   - **獨立欄位**：上交貨量、上級交收
+
+### 修改的文件
+- agent/frontend/index.html
+- deploy/frontend/index.html
+- 更新報表格式修改報告.md 
